--- a/src/Extras/Language/translations/es.json
+++ b/src/Extras/Language/translations/es.json
@@ -10,7 +10,28 @@
     "about.content.one": "La Oficina de Educación Online (EOL) de la Vicerrectoría de Tecnologías de la Información, es una oficina creada con el objetivo de desarrollar capacidades al interior de la Universidad para complementar y enriquecer la práctica docente, mediante la aplicación de nuevas tecnologías de educación online. ",
     "about.content.two": "La Oficina EOL busca contribuir a mejorar el proceso de enseñanza-aprendizaje de los alumnos de la Universidad para todos los niveles de la educación: pregrado, postgrado y educación continua, entregando educación no presencial de excelencia.",
     "about.content.three": "Ofrecemos soporte técnico y pedagógico, proveyendo una plataforma para la gestión del aprendizaje (Learning Management System o LMS), así como también apoyo en diseño instruccional para educación online y producción de cursos en este formato.",
-    "mv.header": "Misión/Vision",
+    "mv.header": "Valores",
     "mv.mission": "Apoyar a la Universidad en su labor de formación, docencia y extensión a través de e-learning, mediante la entrega de servicios y herramientas a las unidades académicas y organismos que lo soliciten",
-    "mv.vision": "Queremos que la Universidad sea El referente en educación online, no solo en tecnología, sino en el proceso de transformación de la educación presencial a digital en todos los niveles."
+    "mv.vision": "Queremos que la Universidad sea El referente en educación online, no solo en tecnología, sino en el proceso de transformación de la educación presencial a digital en todos los niveles.",
+    "services_1.header": "Servicios ofrecidos",
+    "services_1.desc": "La Oficina distribuye su quehacer en 4 líneas de trabajo: educación online para carreras y programas de pregrado y postgrado; educación continua online, proyectos de apoyo a la docencia y cursos MOOC.",
+    "services_1.1.title": "Educación Online para Pregrado y Postgrado",
+    "services_1.1.info": "Para los niveles educacionales de pregrado y postgrado, la Oficina entrega capacitación y acompañamiento.",
+    "services_1.2.title": "Educación Continua",
+    "services_1.2.info": "La oficina es una alternativa de asesoría y soporte de plataforma para las unidades académicas en la ejecución de sus cursos de educación continua.",
+    "services_1.3.title": "Proyectos de apoyo a la docencia",
+    "services_1.3.info": "El objetivo de esta línea es, disponibilizar la plataforma de educación online y entregar asesoría en la creación de cursos que surgen de proyectos conjuntos entre entidades educativas y EOL.",
+    "services_1.4.title": "Cursos MOOC",
+    "services_1.4.info": "La Oficina EOL entrega soporte administrativo y técnico a UAbierta, plataforma de cursos abiertos y en línea de la Universidad de Chile.",
+    "services_1.5.title": "Ruta Digital, SERCOTEC",
+    "services_2.header": "Servicios para terceros",
+    "services_2.desc": "Adicionalmente, EOL presta servicios a terceros en el diseño, producción y ejecución de cursos online. En esta línea, EOL ha realizado diferentes proyectos, a continuación los más relevantes:", 
+    "services_2.1.title": "Ruta Digital, SERCOTEC",
+    "services_2.1.info": "EOL realizó la puesta en marcha de la plataforma de capacitación Ruta Digital",
+    "services_2.2.title": "DocDigital, SEGPRES",
+    "services_2.2.info": "EOL posee una plataforma de capacitación para la División de Gobierno Digital de la Secretaría General de la Presidencia (SEGPRES)",
+    "services_2.3.title": "Programa Emprende Bien",
+    "services_2.3.info": "La oficina EOL ha apoyado la creación de cursos en línea del programa Emprende Bien de la Corporación Construyendo Mis Sueños.",
+    "services_2.4.title": "Convenio de colaboración con CTeC",
+    "services_2.4.info": "La Vicerrectoría de Tecnologías de la Información, a través de la oficina EOL."
 }
