--- a/src/Extras/Language/translations/es.json
+++ b/src/Extras/Language/translations/es.json
@@ -39,8 +39,9 @@
     "mp.eduonline.title": "EduOnline",
     "mp.uabierta.title": "UAbierta",
     "mp.cmmedu.title": "CMM Eduformación",
-    "openedx.header": "Open edX",
-    "openedx.content.one": "La plataforma LMS (Learning Management System) que ofrece la oficina EOL se basa en el proyecto de código abierto Open edX, desarrollado inicialmente por la Universidad de Harvard y el MIT, y clasifica como un sistema de cursos abiertos masivos en línea (Massive Open Online Course, MOOC). Esta característica lo hace estable y escalable para soportar decenas de miles de usuarios." ,
+    "openedx.header": "Nuestra plataforma",
+    "openedx.desc": "Basada en Open edX",
+    "openedx.content.one": "La plataforma que ofrece la Oficina EOL para la educación a distancia se basa en el proyecto de código abierto Open edX, desarrollado inicialmente por la Universidad de Harvard y el MIT, y clasifica como un sistema de cursos abiertos masivos en línea (Massive Open Online Course, MOOC). Esta característica lo hace estable y escalable para soportar decenas de miles de usuarios." ,
     "openedx.content.two": "Esta plataforma ha sido implementada y configurada específicamente para el manejo de los cursos de la Universidad, que en su mayoría son privados y con un grupo acotado de alumnos. Para esto se han desarrollado componentes que permiten gestionar de mejor forma el aprendizaje en estas condiciones.",
     "footer.platforms": "Plataformas",
     "footer.contact": "Contacto",
