Animations & openedX info

--- a/src/Extras/Language/translations/es.json
+++ b/src/Extras/Language/translations/es.json
@@ -43,6 +43,9 @@
     "openedx.desc": "Basada en Open edX",
     "openedx.content.one": "La plataforma que ofrece la Oficina EOL para la educación a distancia se basa en el proyecto de código abierto Open edX, desarrollado inicialmente por la Universidad de Harvard y el MIT, y clasifica como un sistema de cursos abiertos masivos en línea (Massive Open Online Course, MOOC). Esta característica lo hace estable y escalable para soportar decenas de miles de usuarios." ,
     "openedx.content.two": "Esta plataforma ha sido implementada y configurada específicamente para el manejo de los cursos de la Universidad, que en su mayoría son privados y con un grupo acotado de alumnos. Para esto se han desarrollado componentes que permiten gestionar de mejor forma el aprendizaje en estas condiciones.",
+    "openedx.content.showmore": "Conocer más",
+    "openedx.content.lms": "Es el sistema de gestión del aprendizaje, el ambiente en que las y los estudiantes se registran, inician sesión y se inscriben para acceder y participar de cursos. En este espacio, los profesores/as pueden acceder a herramientas administrativas que les permiten visualizar y obtener reportes de las estadísticas del curso, comunicarse con los estudiantes mediante correo , realizar matrículas manuales, administrar el libro de calificaciones, configurar certificados y mucho más.",
+    "openedx.content.cms": "Es un ambiente de gestión del contenido, donde los profesores/as crean, configuran y administran sus cursos y bibliotecas de los mismos. Aquí, los profesores/as pueden agregar contenidos, organizar las actividades de aprendizaje y evaluativas, incorporar recursos audiovisuales, y además configurar el curso y sus políticas en general.",
     "footer.platforms": "Plataformas",
     "footer.contact": "Contacto",
     "footer.copyright": "© 2021 Oficina de Educación Online, Vicerrectoría de Tecnologías de la Información, Universidad de Chile. Todos los derechos reservados.",
