--- a/src/Extras/Language/translations/es.json
+++ b/src/Extras/Language/translations/es.json
@@ -47,9 +47,12 @@
     "openedx.content.showmore": "Conocer más",
     "openedx.content.lms": "Es el sistema de gestión del aprendizaje, el ambiente en que las y los estudiantes se registran, inician sesión y se inscriben para acceder y participar de cursos. En este espacio, los profesores/as pueden acceder a herramientas administrativas que les permiten visualizar y obtener reportes de las estadísticas del curso, comunicarse con los estudiantes mediante correo , realizar matrículas manuales, administrar el libro de calificaciones, configurar certificados y mucho más.",
     "openedx.content.cms": "Es un ambiente de gestión del contenido, donde los profesores/as crean, configuran y administran sus cursos y bibliotecas de los mismos. Aquí, los profesores/as pueden agregar contenidos, organizar las actividades de aprendizaje y evaluativas, incorporar recursos audiovisuales, y además configurar el curso y sus políticas en general.",
+    "footer.rrss": "RRSS VTI",
     "footer.platforms": "Plataformas",
     "footer.contact": "Contacto",
     "footer.copyright": "© 2021 Oficina de Educación Online, Vicerrectoría de Tecnologías de la Información, Universidad de Chile. Todos los derechos reservados.",
+    "footer.schedule_1": "Lun. a Jue.: 9:00 - 18:15",
+    "footer.schedule_2": "Vie.:  9:00 - 16:00",
     "statistics.header": "Estadísticas Plataformas 2020",
     "statistics.users": "Usuarios Registrados",
     "statistics.courses": "Cursos",
