--- a/src/Extras/Language/translations/es.json
+++ b/src/Extras/Language/translations/es.json
@@ -4,8 +4,8 @@
     "navbar.projects": "Proyectos",
     "navbar.teaching_support": "Apoyo Docente",
     "navbar.we": "Nosotros",
-    "teams.header": "Equipo",
-    "teams.desc": "Nuestra oficina está compuesta por profesionales del ámbito de la educación y de las tecnologías de la información",
+    "teams.header": "Nuestro Equipo",
+    "teams.desc": "Nuestra Oficina está compuesta por profesionales del ámbito de la educación y de las tecnologías de la información",
     "about.header": "¿Qué es la Oficina de Educación Online?",
     "about.content.one": "La Oficina de Educación Online (EOL) de la Vicerrectoría de Tecnologías de la Información, es una oficina creada con el objetivo de desarrollar capacidades al interior de la Universidad para complementar y enriquecer la práctica docente, mediante la aplicación de nuevas tecnologías de educación online. ",
     "about.content.two": "La Oficina EOL busca contribuir a mejorar el proceso de enseñanza-aprendizaje de los alumnos de la Universidad para todos los niveles de la educación: pregrado, postgrado y educación continua, entregando educación no presencial de excelencia.",
@@ -14,13 +14,13 @@
     "mv.mission": "Apoyar a la Universidad en su labor de formación, docencia y extensión a través de e-learning, mediante la entrega de servicios y herramientas a las unidades académicas y organismos que lo soliciten",
     "mv.vision": "Queremos que la Universidad sea El referente en educación online, no solo en tecnología, sino en el proceso de transformación de la educación presencial a digital en todos los niveles.",
     "services_1.header": "Servicios ofrecidos",
-    "services_1.desc": "La Oficina distribuye su quehacer en 4 líneas de trabajo: educación online para carreras y programas de pregrado y postgrado; educación continua online, proyectos de apoyo a la docencia y cursos MOOC.",
+    "services_1.desc": "La Oficina EOL distribuye su quehacer en 4 líneas de trabajo: educación online para carreras y programas de pregrado y postgrado; educación continua online, proyectos de apoyo a la docencia y cursos MOOC.",
     "services_1.1.title": "Educación Online para Pregrado y Postgrado",
-    "services_1.1.info": "Para los niveles educacionales de pregrado y postgrado, la Oficina entrega capacitación y acompañamiento.",
+    "services_1.1.info": "Para los niveles educacionales de pregrado y postgrado, la Oficina EOL entrega capacitación y acompañamiento.",
     "services_1.2.title": "Educación Continua",
-    "services_1.2.info": "La oficina es una alternativa de asesoría y soporte de plataforma para las unidades académicas en la ejecución de sus cursos de educación continua.",
+    "services_1.2.info": "La Oficina EOL es una alternativa de asesoría y soporte de plataforma para las unidades académicas en la ejecución de sus cursos de educación continua.",
     "services_1.3.title": "Proyectos de apoyo a la docencia",
-    "services_1.3.info": "El objetivo de esta línea es, disponibilizar la plataforma de educación online y entregar asesoría en la creación de cursos que surgen de proyectos conjuntos entre entidades educativas y EOL.",
+    "services_1.3.info": "Se busca disponibilizar nuestra plataforma y entregar asesoría en la creación de cursos que surgen de proyectos conjuntos entre entidades educativas y EOL.",
     "services_1.4.title": "Cursos MOOC",
     "services_1.4.info": "La Oficina EOL entrega soporte administrativo y técnico a UAbierta, plataforma de cursos abiertos y en línea de la Universidad de Chile.",
     "services_1.5.title": "Ruta Digital, SERCOTEC",
@@ -31,9 +31,9 @@
     "services_2.2.title": "DocDigital, SEGPRES",
     "services_2.2.info": "EOL posee una plataforma de capacitación para la División de Gobierno Digital de la Secretaría General de la Presidencia (SEGPRES)",
     "services_2.3.title": "Programa Emprende Bien",
-    "services_2.3.info": "La oficina EOL ha apoyado la creación de cursos en línea del programa Emprende Bien de la Corporación Construyendo Mis Sueños.",
+    "services_2.3.info": "La Oficina EOL ha apoyado la creación de cursos en línea del programa Emprende Bien de la Corporación Construyendo Mis Sueños, financiado por CORFO.",
     "services_2.4.title": "Convenio de colaboración con CTeC",
-    "services_2.4.info": "La Vicerrectoría de Tecnologías de la Información, a través de la oficina EOL.",
+    "services_2.4.info": "La Vicerrectoría de Tecnologías de la Información, a través de la Oficina EOL.",
     "mp.header": "Plataformas administradas por EOL",
     "mp.eol.title": "Educación Online",
     "mp.eduonline.title": "EduOnline",
@@ -62,12 +62,12 @@
     "testimonials.showmore": "Ver más",
     "testimonials.modal.header": "Testimonio de {name}",
     "testimonials.modal.close": "Cerrar",
-    "functionalities.header": "Funcionalidades e Integraciones",
+    "functionalities.header": "Mejora continua en Funcionalidades e Integraciones",
     "functionalities.desc": "A pesar de ser una plataforma bastante completa en lo que respecta a las funcionalidades, nuestro equipo de ingeniería constantemente está desarrollando y adaptando nuevas soluciones acorde a las necesidades que van presentando los docentes y estudiantes de nuestra Universidad.",
     "functionalities.list.cert.title": "Certificación",
     "functionalities.list.cert.desc": "Nuestra plataforma posibilita la generación de certificados de aprobación de los cursos. Esta certificación puede ser gratuita o de pago.",
     "functionalities.list.scorm.title": "Compatibilidad con estándar SCORM",
-    "functionalities.list.scorm.desc": "SCORM (Shareable Content Object Reference Model) es un conjunto de objetos de aprendizaje empaquetados y estructurados como material web de forma pedagógica bajo un estándar libre que permite importar, reutilizar y compartir contenidos. Nuestra plataforma acepta este tipo de objetos, y permite la evaluación a través de ellos.",
+    "functionalities.list.scorm.desc": "SCORM (Shareable Content Object Reference Model) es un conjunto de objetos de aprendizaje empaquetados y estructurados como material web de forma pedagógica bajo un estándar libre que permite importar, reutilizar y compartir contenidos. Nuestra plataforma acepta este tipo de objetos y permite la evaluación a través de ellos.",
     "functionalities.list.lti.title": "Compatibilidad con estándar LTI 1 & 2",
     "functionalities.list.lti.desc": "LTI (Learning Tools Interoperability), es un estándar de comunicación entre herramientas y sistemas de aprendizaje e-learning. Nuestra plataforma es compatible con este estándar, permitiendo a los docentes integrarse con aplicaciones externas que soporten este estándar.",
     "functionalities.list.invideoquiz.title": "Preguntas en videos",
@@ -93,6 +93,6 @@
     "functionalities.list.payment.title": "Sistemas de pago Webpay/Paypal",
     "functionalities.list.payment.desc": "Existen cursos que requieren un pago previo para la inscripción o la emisión de certificados. Para esto, nuestra plataforma se ha integrado con sistemas de pago nacional (Webpay) e internacional (Paypal).",
     "analytics.header": "Analítica",
-    "analytics.desc": "Observa cómo los estudiantes interactúan con el curso para inferir compromiso y/o deserción. Detecta cual contenido requirió más esfuerzo por parte de los estudiantes para presentar apoyo o re-distribuir el material docente.",
+    "analytics.desc": "Observa cómo los estudiantes interactúan con el curso, para inferir compromiso y/o deserción. Detecta qué contenido requirió más esfuerzo, por parte de los estudiantes, para presentar apoyo o re-distribuir el material docente.",
     "analytics.disclaimer": "(*) El sistema de analítica actualmente se encuentra en fase de desarrollo y no está disponible para todos los cursos."
 }
