Menu button fixed

--- a/src/Extras/Language/translations/es.json
+++ b/src/Extras/Language/translations/es.json
@@ -7,7 +7,7 @@
     "teams.header": "Nuestro Equipo",
     "teams.desc": "Nuestra Oficina está compuesta por profesionales del ámbito de la educación y de las tecnologías de la información",
     "about.header": "¿Qué es la Oficina de Educación Online?",
-    "about.content.one": "La Oficina de Educación Online (EOL) de la Vicerrectoría de Tecnologías de la Información, es una oficina creada con el objetivo de desarrollar capacidades al interior de la Universidad para complementar y enriquecer la práctica docente, mediante la aplicación de nuevas tecnologías de educación online. ",
+    "about.content.one": "La Oficina de Educación Online (EOL) de la Universidad de Chile, es una oficina creada con el objetivo de desarrollar capacidades al interior de la Universidad para complementar y enriquecer la práctica docente, mediante la aplicación de nuevas tecnologías de educación online. ",
     "about.content.two": "La Oficina EOL busca contribuir a mejorar el proceso de enseñanza-aprendizaje de los alumnos de la Universidad para todos los niveles de la educación: pregrado, postgrado y educación continua, entregando educación no presencial de excelencia.",
     "about.content.three": "Ofrecemos soporte técnico y pedagógico, proveyendo una plataforma para la gestión del aprendizaje (Learning Management System o LMS), así como también apoyo en diseño instruccional para educación online y producción de cursos en este formato.",
     "mv.header": "Valores",
