--- a/src/Extras/Language/translations/es.json
+++ b/src/Extras/Language/translations/es.json
@@ -4,6 +4,8 @@
     "navbar.projects": "Proyectos",
     "navbar.teaching_support": "Apoyo Docente",
     "navbar.we": "Nosotros",
+    "history.header": "Historia",
+    "history.content": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
     "teams.header": "Nuestro Equipo",
     "teams.desc": "Nuestra Oficina está compuesta por profesionales del ámbito de la educación y de las tecnologías de la información",
     "about.header": "¿Qué es la Oficina de Educación Online?",
