Pagination replaced by button

--- a/src/Extras/Language/translations/es.json
+++ b/src/Extras/Language/translations/es.json
@@ -59,6 +59,7 @@
     "blog.showmore": "Leer artículo",
     "articles.header": "Artículos",
     "articles.empty": "Aún no tenemos artículos en nuestro blog",
+    "articles.showmore": "Cargar más",
     "article.goback": "Ver artículos",
     "article.author": "Autor",
     "article.tags": "Etiquetas",
