Cecy changes on texts

--- a/src/Extras/Language/translations/es.json
+++ b/src/Extras/Language/translations/es.json
@@ -21,20 +21,20 @@
     "services_1.header": "Servicios ofrecidos",
     "services_1.desc": "La Oficina EOL distribuye su quehacer en 4 líneas de trabajo: educación online para carreras y programas de pregrado y postgrado; educación continua online, proyectos de apoyo a la docencia y cursos MOOC.",
     "services_1.1.title": "Educación Online para Pregrado y Postgrado",
-    "services_1.1.info": "Para los niveles educacionales de pregrado y postgrado, la Oficina EOL entrega capacitación y acompañamiento.",
+    "services_1.1.info": "La Oficina EOL entrega capacitación y acompañamiento a los curso de Pre y Post grado.",
     "services_1.2.title": "Educación Continua",
-    "services_1.2.info": "La Oficina EOL es una alternativa de asesoría y soporte de plataforma para las unidades académicas en la ejecución de sus cursos de educación continua.",
+    "services_1.2.info": "La oficina EOL entrega asesoría y soporte de plataforma para las unidades académicas en la ejecución de sus cursos.",
     "services_1.3.title": "Proyectos de apoyo a la docencia",
-    "services_1.3.info": "Se busca disponibilizar nuestra plataforma y entregar asesoría en la creación de cursos que surgen de proyectos conjuntos entre entidades educativas y EOL.",
+    "services_1.3.info": "La oficina EOL trabaja proyectos conjuntos con entidades educativas y pone a disposición la plataforma  y asesora en la creación de cursos.",
     "services_1.4.title": "Cursos MOOC",
     "services_1.4.info": "La Oficina EOL entrega soporte administrativo y técnico a UAbierta, plataforma de cursos abiertos y en línea de la Universidad de Chile.",
     "services_1.5.title": "Ruta Digital, SERCOTEC",
     "services_2.header": "Servicios para terceros",
-    "services_2.desc": "Adicionalmente, EOL presta servicios a terceros en el diseño, producción y ejecución de cursos online. En esta línea, EOL ha realizado diferentes proyectos, a continuación los más relevantes:", 
+    "services_2.desc": "La oficina EOL, además presta servicios a terceros en el diseño, producción y ejecución de cursos online. En esta línea, EOL ha realizado diferentes proyectos, a continuación los más relevantes:", 
     "services_2.1.title": "Ruta Digital, SERCOTEC",
-    "services_2.1.info": "EOL realizó la puesta en marcha de la plataforma de capacitación Ruta Digital",
+    "services_2.1.info": "Puesta en marcha de la plataforma de capacitación Ruta Digital",
     "services_2.2.title": "DocDigital, SEGPRES",
-    "services_2.2.info": "EOL posee una plataforma de capacitación para la División de Gobierno Digital de la Secretaría General de la Presidencia (SEGPRES)",
+    "services_2.2.info": "Puesta en marcha de una plataforma de capacitación para la División de Gobierno Digital de la Secretaría General de la Presidencia  (SEGPRES)",
     "services_2.3.title": "Programa Emprende Bien",
     "services_2.3.info": "La Oficina EOL ha apoyado la creación de cursos en línea del programa Emprende Bien de la Corporación Construyendo Mis Sueños, financiado por CORFO.",
     "services_2.4.title": "Convenio de colaboración con CTeC",
