Video section. TODO: Tweets height

--- a/src/Extras/Language/translations/es.json
+++ b/src/Extras/Language/translations/es.json
@@ -64,6 +64,9 @@
     "article.author": "Autor",
     "article.tags": "Etiquetas",
     "article.notfound": "Artículo no encontrado",
+    "videos.header": "Videos",
+    "videos.empty": "Aún no tenemos videos en nuestro blog",
+    "videos.showmore": "Cargar más",
     "footer.rrss": "RRSS VTI",
     "footer.platforms": "Plataformas",
     "footer.contact": "Contacto",
