--- a/src/Extras/Language/translations/es.json
+++ b/src/Extras/Language/translations/es.json
@@ -2,7 +2,7 @@
     "navbar.home": "Inicio",
     "navbar.platform": "Plataforma",
     "navbar.projects": "Proyectos",
-    "navbar.teaching_support": "Apoyo Docente",
+    "navbar.teaching_support": "Blog",
     "navbar.we": "Nosotros",
     "history.header": "Historia",
     "history.content": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
@@ -54,7 +54,7 @@
     "openedx.content.showmore": "Conocer más",
     "openedx.content.lms": "Es el sistema de gestión del aprendizaje, el ambiente en que las y los estudiantes se registran, inician sesión y se inscriben para acceder y participar de cursos. En este espacio, los profesores/as pueden acceder a herramientas administrativas que les permiten visualizar y obtener reportes de las estadísticas del curso, comunicarse con los estudiantes mediante correo , realizar matrículas manuales, administrar el libro de calificaciones, configurar certificados y mucho más.",
     "openedx.content.cms": "Es un ambiente de gestión del contenido, donde los profesores/as crean, configuran y administran sus cursos y bibliotecas de los mismos. Aquí, los profesores/as pueden agregar contenidos, organizar las actividades de aprendizaje y evaluativas, incorporar recursos audiovisuales, y además configurar el curso y sus políticas en general.",
-    "blog.header": "Apoyo docente",
+    "blog.header": "Blog",
     "blog.showall": "Ver más",
     "blog.showmore": "Leer artículo",
     "articles.header": "Artículos",
@@ -66,6 +66,7 @@
     "article.notfound": "Artículo no encontrado",
     "videos.header": "Videos",
     "videos.empty": "Aún no tenemos videos en nuestro blog",
+    "tweets.error": "No se ha podido cargar los últimos tweets",
     "videos.showmore": "Cargar más",
     "footer.rrss": "RRSS VTI",
     "footer.platforms": "Plataformas",
