Refactor + Blog design + history

--- a/src/Extras/Language/translations/es.json
+++ b/src/Extras/Language/translations/es.json
@@ -2,10 +2,11 @@
     "navbar.home": "Inicio",
     "navbar.platform": "Plataforma",
     "navbar.projects": "Proyectos",
-    "navbar.teaching_support": "Blog",
+    "navbar.teaching_support": "Apoyo Docente",
     "navbar.we": "Nosotros",
     "history.header": "Historia",
-    "history.content": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
+    "history.content.one": "En julio del 2017 la Oficina de Educación Online -EOL- de la Universidad de Chile, comienza a funcionar a partir de un proyecto de mejoramiento institucional para innovación en educación superior del MINEDUC, impulsado por el director de tecnologías y la Vicerrectoría de Asuntos Económicos y Gestión Institucional. La oficina EOL implementó una plataforma de gestión del aprendizaje de código abierto bajo el dominio eol.uchile.cl, iniciando su funcionamiento con 2 cursos electivos de pregrado y 1 de postgrado.",
+    "history.content.two": "EOL, hoy en día, administra una variedad de plataformas, lo que ha permitido dictar más de 600 cursos online de diferente naturaleza y nivel educacional. La oficina cuenta con un equipo multidisciplinario comprometido en la contribución diaria a la educación mediada por tecnologías, quienes forman parte de la actual Vicerrectoría de Tecnologías de la Información y trabajan colaborativamente con la Vicerrectoría de Asuntos Académicos de la Universidad de Chile.",
     "teams.header": "Nuestro Equipo",
     "teams.desc": "Nuestra Oficina está compuesta por profesionales del ámbito de la educación y de las tecnologías de la información",
     "about.header": "Oficina de Educación Online",
@@ -54,8 +55,8 @@
     "openedx.content.showmore": "Conocer más",
     "openedx.content.lms": "Es el sistema de gestión del aprendizaje, el ambiente en que las y los estudiantes se registran, inician sesión y se inscriben para acceder y participar de cursos. En este espacio, los profesores/as pueden acceder a herramientas administrativas que les permiten visualizar y obtener reportes de las estadísticas del curso, comunicarse con los estudiantes mediante correo , realizar matrículas manuales, administrar el libro de calificaciones, configurar certificados y mucho más.",
     "openedx.content.cms": "Es un ambiente de gestión del contenido, donde los profesores/as crean, configuran y administran sus cursos y bibliotecas de los mismos. Aquí, los profesores/as pueden agregar contenidos, organizar las actividades de aprendizaje y evaluativas, incorporar recursos audiovisuales, y además configurar el curso y sus políticas en general.",
-    "blog.header": "Blog",
-    "blog.showall": "Ver más",
+    "blog.header": "Apoyo Docente",
+    "blog.showall": "acá",
     "blog.showmore": "Leer artículo",
     "articles.header": "Artículos",
     "articles.empty": "Aún no tenemos artículos en nuestro blog",
@@ -64,8 +65,8 @@
     "article.author": "Autor",
     "article.tags": "Etiquetas",
     "article.notfound": "Artículo no encontrado",
-    "videos.header": "Videos",
-    "videos.empty": "Aún no tenemos videos en nuestro blog",
+    "videos.header": "Noticias relevantes",
+    "videos.empty": "Aún no tenemos noticias en nuestro blog",
     "tweets.error": "No se ha podido cargar los últimos tweets",
     "videos.showmore": "Cargar más",
     "footer.rrss": "RRSS VTI",
