Remove 'caja los andes' text

--- a/src/Extras/Language/translations/es.json
+++ b/src/Extras/Language/translations/es.json
@@ -45,7 +45,7 @@
     "mp.eduonline.title": "EduOnline",
     "mp.uabierta.title": "UAbierta",
     "mp.cmmedu.title": "CMM Eduformación",
-    "mp.virtuallabx.title": "Caja los Andes Virtual LabX",
+    "mp.virtuallabx.title": "Virtual LabX",
     "openedx.header": "Nuestra plataforma",
     "openedx.desc": "Basada en Open edX",
     "openedx.content": "EOL es la plataforma de gestión del aprendizaje de la Universidad de Chile, creada para ser usada en cursos diseñados para ser impartidos en formato completamente en línea o semi presencial.",
