Updated the platforms managed by EOL

--- a/src/Extras/Language/translations/es.json
+++ b/src/Extras/Language/translations/es.json
@@ -31,7 +31,7 @@
     "services_1.4.info": "La Oficina EOL entrega soporte administrativo y técnico a UAbierta, plataforma de cursos abiertos y en línea de la Universidad de Chile.",
     "services_1.5.title": "Ruta Digital, SERCOTEC",
     "services_2.header": "Servicios para terceros",
-    "services_2.desc": "La oficina EOL, además presta servicios a terceros en el diseño, producción y ejecución de cursos online. En esta línea, EOL ha realizado diferentes proyectos, a continuación los más relevantes:", 
+    "services_2.desc": "La oficina EOL, además presta servicios a terceros en el diseño, producción y ejecución de cursos online. En esta línea, EOL ha realizado diferentes proyectos, a continuación los más relevantes:",
     "services_2.1.title": "Ruta Digital, SERCOTEC",
     "services_2.1.info": "Puesta en marcha de la plataforma de capacitación Ruta Digital",
     "services_2.2.title": "DocDigital, SEGPRES",
@@ -42,10 +42,10 @@
     "services_2.4.info": "La Vicerrectoría de Tecnologías de la Información, a través de la Oficina EOL.",
     "mp.header": "Plataformas administradas por EOL",
     "mp.eol.title": "Educación Online",
-    "mp.eduonline.title": "EduOnline",
+    "mp.virtuallabx.title": "Virtual LabX",
     "mp.uabierta.title": "UAbierta",
     "mp.cmmedu.title": "CMM Eduformación",
-    "mp.virtuallabx.title": "Virtual LabX",
+    "mp.virtuallabx-caja.title": "Virtual LabX - Caja Los Andes",
     "openedx.header": "Nuestra plataforma",
     "openedx.desc": "Basada en Open edX",
     "openedx.content": "EOL es la plataforma de gestión del aprendizaje de la Universidad de Chile, creada para ser usada en cursos diseñados para ser impartidos en formato completamente en línea o semi presencial.",
